[gd_scene load_steps=3 format=3 uid="uid://cruvada5eowm0"]

[ext_resource type="Script" path="res://Skill.gd" id="1_r17lc"]

[sub_resource type="Theme" id="Theme_s4b0e"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r17lc")
name_of_the_skill = "Movement speed"
upgrade_increment = 10
upgrade_cost = 1
upgrade_cost_increase = 1
initial_min_value = 10
initial_max_value = 100

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CurrentValueINT" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 0
text = "100"
horizontal_alignment = 1

[node name="Skillname" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Skillname"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MinValueINT" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
horizontal_alignment = 1

[node name="Slider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme = SubResource("Theme_s4b0e")
min_value = 15.0
max_value = 150.0
value = 15.0

[node name="MaxValueINT" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "100"
horizontal_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "CLICK TO UPGRADE"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Effect_label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "A descriptive text of what the skill or the upgrade does"
fit_content = true

[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Slider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/UpgradeButton" to="." method="_on_upgrade_pressed"]
